--- a/index2.html
+++ b/index2.html
@@ -20,20 +20,22 @@
                 <li><a href="">Acerca</a></li>
             </ul>
         </nav>
-        <h1>Resgistrate para recibir descuentos infernales</h1>
-        <div class="form">
-            <ul>
-              <li><label for="nombre y apellido">Nombre</label><input type="text" name="nombre y apellido"></li>
-              <li><label for="edad">Edad</label><input type="number" name="edad"></li>
-              <li><label for="email">Email</label><input type="email" name="email"></li>
-              <li><label for="password">Password</label><input type="password" name="password"></li>
-              <label for="recibir info">Deseo recibir a mi mail más información</label>
-                      <input type="radio" id="si" name ="recibir info" value="si">
-                      <label for="si">Sí</label>
-                      <input type="radio" id="no" name ="recibir info" value="no">
-                      <label for="no">No</label><br><br>
-                      <button>Registrarse</button>
-            </ul>
+        <h1 class="h1-form">Resgistrate para recibir descuentos infernales</h1>
+       <div class="form-container">
+            <div class="form">
+                <ul>
+                <li><label for="nombre y apellido">Nombre</label><input type="text" name="nombre y apellido"></li>
+                <li><label for="edad">Edad</label><input type="number" name="edad"></li>
+                <li><label for="email">Email</label><input type="email" name="email"></li>
+                <li><label for="password">Password</label><input type="password" name="password"></li>
+                <label for="recibir info">Deseo recibir a mi mail más información</label>
+                        <input type="radio" id="si" name ="recibir info" value="si">
+                        <label for="si">Sí</label>
+                        <input type="radio" id="no" name ="recibir info" value="no">
+                        <label for="no">No</label><br><br>
+                        <button>Registrarse</button>
+                </ul>
+            </div>
         </div>
         <footer class="footer-form">Iris Sol Villalba Diseño y Produccion. </footer>
     </main>
