--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Nezuko-Chan</title>
 </head>
 <body>
+    <div class="fixed"><a href="#up">UP</a></div>
     <main>
-        <header>
+        <header id="up">
             <h1>NEZUKO-CHAN</h1>
             <h2>TIENDA DE ANIME</h2>
         </header>
